--- a/src/Views/RevisionCompare.axaml
+++ b/src/Views/RevisionCompare.axaml
@@ -28,12 +28,12 @@
           <TextBlock Grid.Column="4" Classes="primary" Text="{Binding CommitterTimeStr}" Foreground="{DynamicResource Brush.FG2}" Margin="8,0,0,0"/>
         </Grid>
 
-        <TextBlock Grid.Row="1" Classes="primary" Text="{Binding Subject}" VerticalAlignment="Bottom"/>
+        <TextBlock Grid.Row="1" Classes="primary" Text="{Binding Subject}" Margin="0,6,0,0"/>
       </Grid>
     </DataTemplate>
   </UserControl.DataTemplates>
 
-  <Grid RowDefinitions="50,*" Margin="4">
+  <Grid RowDefinitions="Auto,*" Margin="4">
     <!-- Compare Revision Info -->
     <Grid Grid.Row="0" Margin="0,0,0,6" ColumnDefinitions="*,32,*,Auto">
       <!-- Base Revision -->
