--- a/src/Views/TagsView.axaml
+++ b/src/Views/TagsView.axaml
@@ -26,11 +26,26 @@
                SelectionChanged="OnRowSelectionChanged">
         <ListBox.ItemTemplate>
           <DataTemplate DataType="vm:TagTreeNode">
-            <Border Height="24" Background="Transparent" PointerPressed="OnRowPointerPressed" DoubleTapped="OnDoubleTappedNode" ContextRequested="OnRowContextRequested">
+            <Border Height="24" Background="Transparent" PointerPressed="OnRowPointerPressed" DoubleTapped="OnDoubleTappedNode" ContextRequested="OnRowContextRequested" ToolTip.Tip="{Binding ToolTip}">
+              <Border.DataTemplates>
+                <DataTemplate DataType="vm:TagTreeNodeToolTip">
+                  <StackPanel Orientation="Vertical" MinWidth="200">
+                    <StackPanel Orientation="Horizontal" Margin="0,0,0,6">
+                      <Path Width="10" Height="10" Data="{StaticResource Icons.Tag}"/>
+                      <TextBlock FontWeight="Bold" Margin="4,0,0,0" Text="{Binding Name}"/>
+                      <Border Background="Green" Margin="4,0,0,0" CornerRadius="4" IsVisible="{Binding IsAnnotated}">
+                        <TextBlock Text="annotated" Classes="primary" Margin="4,0" Foreground="#FFDDDDDD"/>
+                      </Border>
+                    </StackPanel>
+
+                    <TextBlock Text="{Binding Message}"/>
+                  </StackPanel>
+                </DataTemplate>
+              </Border.DataTemplates>
+              
               <Grid ColumnDefinitions="16,Auto,*,Auto"
                     Margin="{Binding Depth, Converter={x:Static c:IntConverters.ToTreeMargin}}"
-                    VerticalAlignment="Center"
-                    ToolTip.Tip="{Binding ToolTip}">
+                    VerticalAlignment="Center">
                 <v:TagTreeNodeToggleButton Grid.Column="0"
                                            Classes="tree_expander"
                                            Focusable="False"
@@ -42,11 +57,10 @@
                                    Node="{Binding .}"
                                    IsExpanded="{Binding IsExpanded, Mode=OneWay}"/>
 
-                <Border Grid.Column="2" Background="Transparent">
-                  <TextBlock Classes="primary"
-                             Text="{Binding FullPath, Converter={x:Static c:PathConverters.PureFileName}}"
-                             Margin="8,0,0,0"/>
-                </Border>
+                <TextBlock Grid.Column="2"
+                           Classes="primary"
+                           Text="{Binding FullPath, Converter={x:Static c:PathConverters.PureFileName}}"
+                           Margin="8,0,0,0"/>
 
                 <ContentControl Grid.Column="3" Content="{Binding Tag}">
                   <ContentControl.DataTemplates>
@@ -71,18 +85,31 @@
         <ListBox.ItemTemplate>
           <DataTemplate DataType="m:Tag">
             <Border Height="24" Background="Transparent" PointerPressed="OnRowPointerPressed" ContextRequested="OnRowContextRequested">
-              <Grid ColumnDefinitions="Auto,*,Auto" VerticalAlignment="Center" ToolTip.Tip="{Binding Message}">
+              <ToolTip.Tip>
+                <StackPanel Orientation="Vertical" MinWidth="200">
+                  <StackPanel Orientation="Horizontal" Margin="0,0,0,6">
+                    <Path Width="10" Height="10" Data="{StaticResource Icons.Tag}"/>
+                    <TextBlock FontWeight="Bold" Margin="4,0,0,0" Text="{Binding Name}"/>
+                    <Border Background="Green" Margin="4,0,0,0" CornerRadius="4" IsVisible="{Binding IsAnnotated}">
+                      <TextBlock Text="annotated" Classes="primary" Margin="4,0" Foreground="#FFDDDDDD"/>
+                    </Border>
+                  </StackPanel>
+
+                  <TextBlock Text="{Binding Message}"/>
+                </StackPanel>
+              </ToolTip.Tip>
+              
+              <Grid ColumnDefinitions="Auto,*,Auto" VerticalAlignment="Center">
                 <Path Grid.Column="0"
                       Margin="8,0,0,0"
                       Width="12" Height="12"
                       Data="{StaticResource Icons.Tag}"/>
 
-                <Border Grid.Column="1" Background="Transparent">
-                  <TextBlock Classes="primary"
-                             Text="{Binding Name}"
-                             Margin="8,0,0,0"
-                             TextTrimming="CharacterEllipsis"/>
-                </Border>
+                <TextBlock Grid.Column="1"
+                           Classes="primary"
+                           Text="{Binding Name}"
+                           Margin="8,0,0,0"
+                           TextTrimming="CharacterEllipsis"/>
 
                 <v:FilterModeSwitchButton Grid.Column="2" Margin="0,0,12,0" Mode="{Binding FilterMode}"/>
               </Grid>
