--- a/src/Views/TagsView.axaml
+++ b/src/Views/TagsView.axaml
@@ -29,16 +29,16 @@
             <Border Height="24" Background="Transparent" PointerPressed="OnRowPointerPressed" DoubleTapped="OnDoubleTappedNode" ContextRequested="OnRowContextRequested" ToolTip.Tip="{Binding ToolTip}">
               <Border.DataTemplates>
                 <DataTemplate DataType="vm:TagTreeNodeToolTip">
-                  <StackPanel Orientation="Vertical" MinWidth="200">
-                    <StackPanel Orientation="Horizontal" Margin="0,0,0,6">
+                  <StackPanel Orientation="Vertical" Spacing="6">
+                    <StackPanel Orientation="Horizontal">
                       <Path Width="10" Height="10" Data="{StaticResource Icons.Tag}"/>
                       <TextBlock FontWeight="Bold" Margin="4,0,0,0" Text="{Binding Name}"/>
                       <Border Background="Green" Margin="4,0,0,0" CornerRadius="4" IsVisible="{Binding IsAnnotated}">
-                        <TextBlock Text="annotated" Classes="primary" Margin="4,0" Foreground="#FFDDDDDD"/>
+                        <TextBlock Text="{DynamicResource Text.CreateTag.Type.Annotated}" Classes="primary" Margin="4,0" Foreground="#FFDDDDDD"/>
                       </Border>
                     </StackPanel>
 
-                    <TextBlock Text="{Binding Message}"/>
+                    <TextBlock Text="{Binding Message}" IsVisible="{Binding Message, Converter={x:Static c:StringConverters.IsNotNullOrWhitespace}}"/>
                   </StackPanel>
                 </DataTemplate>
               </Border.DataTemplates>
@@ -86,16 +86,16 @@
           <DataTemplate DataType="m:Tag">
             <Border Height="24" Background="Transparent" PointerPressed="OnRowPointerPressed" ContextRequested="OnRowContextRequested">
               <ToolTip.Tip>
-                <StackPanel Orientation="Vertical" MinWidth="200">
-                  <StackPanel Orientation="Horizontal" Margin="0,0,0,6">
+                <StackPanel Orientation="Vertical" Spacing="6">
+                  <StackPanel Orientation="Horizontal">
                     <Path Width="10" Height="10" Data="{StaticResource Icons.Tag}"/>
                     <TextBlock FontWeight="Bold" Margin="4,0,0,0" Text="{Binding Name}"/>
                     <Border Background="Green" Margin="4,0,0,0" CornerRadius="4" IsVisible="{Binding IsAnnotated}">
-                      <TextBlock Text="annotated" Classes="primary" Margin="4,0" Foreground="#FFDDDDDD"/>
+                      <TextBlock Text="{DynamicResource Text.CreateTag.Type.Annotated}" Classes="primary" Margin="4,0" Foreground="#FFDDDDDD"/>
                     </Border>
                   </StackPanel>
 
-                  <TextBlock Text="{Binding Message}"/>
+                  <TextBlock Text="{Binding Message}" IsVisible="{Binding Message, Converter={x:Static c:StringConverters.IsNotNullOrWhitespace}}"/>
                 </StackPanel>
               </ToolTip.Tip>
               
